--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
   <title>My To Do List</title>
 </head>
 <body>
-  <div class="titleAndSubt container mb-5" id="titleAndSubtId">
+  <div class="titleAndSubt d-flex flex-column align-items-center mb-5" id="titleAndSubtId">
   <h1 class="mainTitle mt-4" id="toDoTitle">Mi lista de tareas</h1>
   <h2 class="newTaskTitle" id="newTaskTitleId">Agregar una nueva tarea</h2>
   </div>
@@ -20,6 +21,19 @@
     <input type="text" class="taskInputField d-block" id="taskInputFieldId" placeholder="Comprar shampoo">
     <button type="submit" class="taskToListBtn btn mt-3" id="taskToListBtnId">Agregar tarea</button>
   </form>
+  </div>
+  <div class="activitiesList mt-5 container" id="activitiesListId">
+    <div class="activityCard d-flex align-items-center justify-content-between" id="activityCardId">
+      <span><b class="pl-4">Actividad a realizar</b> - Estado</span>
+      <span class="float-right pr-4">
+        <i class="material-icons">
+          done
+        </i>
+        <i class="material-icons">
+          delete
+        </i>
+      </span>
+    </div>
   </div>
   <script src="./app.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
