padding added to input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div class="formContainer container" id="formContainerId">
   <form class="newTaskForm" id="newTaskFormId">
-    <input type="text" class="taskInputField d-block" id="taskInputFieldId" placeholder="Comprar shampoo">
+    <input type="text" class="taskInputField d-block p-1" id="taskInputFieldId" placeholder="Comprar shampoo">
     <button type="submit" class="taskToListBtn btn mt-3" id="taskToListBtnId">Agregar tarea</button>
   </form>
   </div>
